# BMPOverlayerToYUV420

./: CMakeLists.txt  README.md  bmppicture.cpp  bmppicture.h  cliparser.cpp  cliparser.h  filefunctions.cpp  filefunctions.h  main.cpp  rgbframe.h
Converters/: CMakeLists.txt  rgbtoi420yuvconverter.cpp  rgbtoi420yuvconverter.h
YUV/: CMakeLists.txt  i420yuvframe.cpp  i420yuvframe.h  i420yuvframefactory.cpp  i420yuvframefactory.h  yuvframe.h  yuvframefactory.h
YUV/Video/: yuvvideoreader.cpp  yuvvideoreader.h  yuvvideowriter.cpp  yuvvideowriter.h
